--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkando HTML com JS</title>
+    <title>Calculadora</title>
 </head>
-
 <body>
-    <input type="button" value="botao 1" id="bt1" onclick="clq1()">
-    <input type="button" value="botao 2" id="bt2">
+    <select name="idioma" id="idioma">
+        <option value="br" selected="selected">Português(Brasil)</option>
+        <option value="en">English</option>
+        <option value="fr">Francês</option>
+        <option value="es">Espanhol</option>
+    </select>
     <br>
-    <input type="text" id="valor1">
-    <p>+</p>
-    <input type="text" id="valor2">
+    <input type="name" name="valor1" id="valor1">
+    <input type="name" name="valor2" id="valor2">
+    <br>
     <p id="resultado"></p>
+    <br>
+    <input type="button" value="Soma" id="btSoma">
+    <input type="button" value="Subtração" id="btSubtracao">
+    <input type="button" value="Multiplicação" id="btMultiplicacao">
+    <input type="button" value="Divisão" id="btDivisao">
+    <br>
+    <input type="button" value="Botao 1" id="btn1" onclick="clq1()">
+    <input type="button" value="Botao 2" id="btn2">
 
+    <script type="text/javascript" src="script.js"></script>
 </body>
-<script type="text/script" src="script.js"></script>
-
 </html>
