--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <input type="button" value="Multiplicação" id="btMultiplicacao">
     <input type="button" value="Divisão" id="btDivisao">
     <br>
-    <input type="button" value="Botao 1" id="btn1" onclick="clq1()">
-    <input type="button" value="Botao 2" id="btn2">
+    <input type="button" value="Botão 1" id="btn1" onclick="clq1()">
+    <input type="button" value="Botão 2" id="btn2">
 
     <script type="text/javascript" src="script.js"></script>
+    <script src="translate.js"></script>
 </body>
 </html>
